fixes_alignment

--- a/assets/scss/_colors.scss
+++ b/assets/scss/_colors.scss
@@ -6,6 +6,7 @@ $sky-blue: #CAD3E3 !default;
 $light-blue: #73a3e8 !default;
 $faint-blue: #F6F7FB;
 $deep-blue: #698ABA;
+$green: #008000;
 
 
 $blue-lighter: #d0e0f7;
@@ -38,6 +39,7 @@ $colors: (
   'black': $black,
   'gray': $gray,
   'blue': $blue,
+  'green': $green,
   'faint-blue': $faint-blue,
   'sky-blue': $sky-blue,
   'light-blue': $light-blue,
