--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -29,8 +29,9 @@
 .section-header {
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
-  font-size: 34px;
+  font-size: 32px;
   line-height: 26px;
+  letter-spacing: -2px;
 }
 
 .group-header {
